--- a/src/www/index.html
+++ b/src/www/index.html
@@ -76,7 +76,8 @@
         <!-- <script src="http://debug-software.intel.com/target/target-script-min.js#insertabiglongfunkynumberfromthexdkstesttab"></script> -->
 
         <div class="uwrap" id="content">
-            <div class="upage panel main-background" id="mainpage" data-header="af-header-0" data-footer="none">
+            <div class="upage panel main-background" id="mainpage" data-header="af-header-0" data-footer="none" style="background-color: white">
+                
                 <div class="upage-outer">
                     <header class="container-group inner-element uib_w_5" data-uib="app_framework/header" data-ver="1" id="af-header-0">
                         <h1></h1>
