Fixed header title.

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -77,19 +77,13 @@
 
         <div class="uwrap" id="content">
             <div class="upage panel main-background" id="mainpage" data-header="af-header-0" data-footer="none" style="background-color: white">
-                
+
                 <div class="upage-outer">
                     <header class="container-group inner-element uib_w_5" data-uib="app_framework/header" data-ver="1" id="af-header-0">
-                        <h1></h1>
+                        <h1>Prawesome</h1>
                         <div class="widget-container wrapping-col single-centered"></div>
                         <div class="widget-container content-area horiz-area wrapping-col left">
-                            <div class="widget uib_w_6 d-margins main-name main-margins" data-uib="media/text" data-ver="0">
-                                <div class="widget-container left-receptacle"></div>
-                                <div class="widget-container right-receptacle"></div>
-                                <div>
-                                    <p>Prawesome</p>
-                                </div>
-                            </div>
+
                         </div>
                         <div class="widget-container content-area horiz-area wrapping-col right"></div>
                     </header>
